<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".gymdbactivities.addexerciseactivities.AddExerciseActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exerciseName"
        android:textSize="25dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputEquipmentsName"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addPhoto"
                android:text="@string/addPhoto"/>

            <Button
                android:id="@+id/add.description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addDescription"/>

        </LinearLayout>


        <ImageView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/equipment.image"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isolationExercise"/>

        <Switch
            android:textOff="@string/no"
            android:textOn="@string/yes"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/isolation.switch"/>

    </LinearLayout>

    <Button
        android:id="@+id/add.equipment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usedEquipments"/>
    <Button
        android:id="@+id/add.muscles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/involvedMuscles"/>

    <Button
        android:id="@+id/add.exercise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"/>

    </LinearLayout>

